--- a/rent/package.json
+++ b/rent/package.json
@@ -61,6 +61,8 @@
     "react-select": "^5.9.0",
     "react-simple-maps": "4.0.0-beta.6",
     "react-syntax-highlighter": "^15.6.1",
+    "react-to-pdf": "^2.0.0",
+    "react-to-print": "^3.0.5",
     "react-tooltip": "^5.28.0",
     "simplebar-react": "^3.3.0",
     "swr": "^2.3.0",
