--- a/rent/package.json
+++ b/rent/package.json
@@ -45,6 +45,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "marked": "^15.0.3",
+    "n2words": "^1.21.0",
     "react": "19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-csv": "^2.2.2",
