--- a/rent/package.json
+++ b/rent/package.json
@@ -38,6 +38,7 @@
     "d3-scale": "^4.0.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "exif-js": "^2.3.0",
     "firebase": "^11.1.0",
     "framer-motion": "11.15.0",
     "gantt-task-react": "^0.3.9",
