--- a/rent/package.json
+++ b/rent/package.json
@@ -22,6 +22,7 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-select": "^2.2.6",
     "@react-google-maps/api": "^2.20.6",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "^8.20.5",
@@ -40,7 +41,7 @@
     "dayjs": "^1.11.13",
     "exif-js": "^2.3.0",
     "firebase": "^11.1.0",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
     "gantt-task-react": "^0.3.9",
     "html-react-parser": "^5.2.1",
     "js-cookie": "^3.0.5",
