--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,6 @@
 /rent/node_modules
 /rent/function/functtions/node_modules
 /rent/.env
+/api/node_modules
 /report/node_modules
 /retool/node_modules
-/api
-/report
-/retool
-/common
