--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "build": "npx tsc",
+    "build-2": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
+    "build": "tsup src/index.ts --platform node --format cjs --target node18 --bundle --clean",
+    "build-x": "npx tsc",
     "start": "node src/index.js",
     "dev-2": "nodemon ./src/index.ts",
     "dev": "nodemon --watch src --ext ts,js,json --exec ts-node -r tsconfig-paths/register src/index.ts",
@@ -37,7 +39,9 @@
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
+    "tsup": "^8.5.1",
     "typescript": "^5.9.3"
   },
   "dependencies": {
