--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -6,15 +6,22 @@
     "moduleResolution": "NodeNext" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "@App/*": ["./src/*"],
-      "@Damba/*": ["./common/Damba/*"],
-      "@Common/*": ["./common/*"]
+      "@App/*": [
+        "./src/*"
+      ],
+      "@Damba/*": [
+        "./common/Damba/*"
+      ],
+      "@Common/*": [
+        "./common/*"
+      ]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     "types": [
       "node"
     ] /* Specify type package names to be included without being referenced in a source file. */,
+    "rootDir": "src",
     "outDir": "./dist" /* Specify an output folder for all emitted files. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     // "preserveSymlinks": true,                         /* Disable resolving symlinks to their realpath. This correlates to the same flag in node. */
