--- a/api/package.json
+++ b/api/package.json
@@ -7,10 +7,9 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "build": "tsc -p tsconfig.json && tsc-alias -p tsconfig.json",
-    "build-2": "tsup src/index.ts --platform node --format cjs --target node18 --bundle --clean",
-    "build-x": "npx tsc",
-    "start-2": "node src/index.js",
-    "start": "node dist/index.js",
+    "build-3": "tsup src/index.ts --platform node --format cjs --target node18 --bundle --clean",
+    "build-1": "npx tsc",
+    "start": "node src/index.js",
     "dev-2": "nodemon ./src/index.ts",
     "dev": "nodemon --watch src --ext ts,js,json --exec ts-node -r tsconfig-paths/register src/index.ts",
     "prepare": "husky"
